# sudodle

./: .gitignore  LICENSE.txt  README.md  specifications.md
.github/workflows/: deploy.yml
puzzle_generation/: .gitignore  README.md  guess_mode_exploration.ipynb  puzzle_book_template.html  single_mode_exploration.ipynb
puzzle_generation/modules/: generate_random_latin_square.py  solve_sudodle_via_human_heuristics.py  utils.py
puzzle_generation/rust_puzzle_finder/: find_puzzles.rs
study/: Readme.md  generate_puzzle_pdf.py  puzzle_book_template.html  simulation_results.ipynb  single_mode_exploration.ipynb  sudodle_plotting.py  sudodle_simulation.py
study/modules/: find_single_solution_puzzles.py  parse_rust_results.py  simulate_game.py  solve_sudodle_semi_optimized.py  sudodle_plotting.py
study/rust_puzzle_finder/: .gitignore  Cargo.toml  Readme.md  find_puzzles.rs  optimizations.md
sudodle/: README.md  index.html  package-lock.json  package.json  specifications.md  vite.config.js
sudodle/public/: compacted_puzzles.txt  manifest.webmanifest  puzzles.csv
sudodle/src/: App.svelte  ConfirmNewGame.svelte  CurrentGrid.svelte  Settings.svelte  app.css
sudodle/src/components/: CurrentGrid.svelte  LanguageFlags.svelte  PWAInstallButton.svelte  PreviousGrid.svelte  Settings.svelte  VictorySection.svelte
sudodle/src/lib/: i18n.js  latinSquares.js  puzzleData.js  puzzles.csv
sudodle/src/lib/locales/: en.json  fr.json
